--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Spectrum Inc. Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link href="./css/index.css" rel="stylesheet">
+
 </head>
-<body>
-    <h1>Hello, world!</h1>
+<body class="text-light">
+    <nav class="navbar navbar-expand-lg row p-2" >
+            <a class="navbar-brand col" href="#">
+                <img src="./assets/spectrum_logo.png" alt="spectruminc logo" height="20">
+            </a>
+            <div class="col">DreamHome, Inc. Administration</div>
+            <div class="col text-end">
+                <span class="badge bg-primary rounded-0 mx-1">SPECTRUM</span>
+                <span>brookek@spectruminc.com</span>
+                <a href="" class="mx-1">
+                    <i class="bi bi-power"></i>
+                </a>
+            </div>
+    </nav>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
