--- a/index.html
+++ b/index.html
@@ -10,19 +10,141 @@
 
 </head>
 <body class="text-light">
-    <nav class="navbar navbar-expand-lg row p-2" >
-            <a class="navbar-brand col" href="#">
-                <img src="./assets/spectrum_logo.png" alt="spectruminc logo" height="20">
-            </a>
-            <div class="col">DreamHome, Inc. Administration</div>
-            <div class="col text-end">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg row sticky-top" >
+            <div class="col">
+                <a class="navbar-brand col" href="#">
+                    <img src="./assets/spectrum_logo.png" alt="spectruminc logo" height="20">
+                </a>
+            </div>
+            <div class="col text-center fw-semibold">DreamHome, Inc. Administration</div>
+            <div class="col flex-shrink-0 text-end">
                 <span class="badge bg-primary rounded-0 mx-1">SPECTRUM</span>
-                <span>brookek@spectruminc.com</span>
+                <span class="fw-semibold">brookek@spectruminc.com</span>
                 <a href="" class="mx-1">
                     <i class="bi bi-power"></i>
                 </a>
             </div>
-    </nav>
+        </nav>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row p-0">
+            <nav class="text-light p-0 sidebar overflow-auto pb-5 col-md-3 col-lg-3 col-xl-2">
+                <ul class="list-unstyled ps-0">
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 justify-content-between text-start">
+                            <span>
+                                <i class="bi bi-arrow-up-right-square-fill me-3"></i>
+                                <span class="align-self-baseline">Predictive Sales AI</span>
+                            </span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start">
+                            <i class="bi bi-speedometer me-3"></i>
+                            <span class="sidebar-text">Dashboard</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start">
+                            <i class="bi bi-display-fill me-3"></i>
+                            <span class="sidebar-text">Website</span>
+                        </button>
+                    </li>
+
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 justify-content-between text-start" data-bs-toggle="collapse" data-bs-target="#contacts-collapse" aria-expanded="true">
+                            <span>
+                                <i class="bi bi-person-fill me-3"></i>
+                                <span class="align-self-baseline">Contact Manager</span>
+                            </span>
+                            <i class="bi bi-dash-square"></i>
+                        </button>
+                        <div class="show px-4" id="contacts-collapse">
+                            <ul class="btn-toggle-nav list-unstyled small">
+                                <li class="dropdown-item"><a href="#" class="link-light text-decoration-none">Contacts</a></li>
+                                <li class="dropdown-item"><a href="#" class="link-light text-decoration-none">Activity</a></li>
+                                <li class="dropdown-item"><a href="#" class="link-light text-decoration-none">Events</a></li>
+                                <li class="dropdown-item"><a href="#" class="link-light text-decoration-none">Calendar</a></li>
+                                <li class="dropdown-item"><a href="#" class="link-light text-decoration-none">Tags</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start justify-content-between">
+                            <span>
+                                <i class="bi bi-search me-3"></i>
+                                <span class="sidebar-text">SEO</span>
+                            </span>
+                            <i class="bi bi-plus-square"></i>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start justify-content-between">
+                            <span>
+                                <i class="bi bi-star-fill me-3"></i>
+                                <span class="sidebar-text">Reputation Manager</span>
+                            </span>
+                            <i class="bi bi-plus-square"></i>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start justify-content-between">
+                            <span>
+                                <i class="bi bi-pencil-square me-3"></i>
+                                <span class="sidebar-text">Projects</span>
+                            </span>
+                            <i class="bi bi-plus-square"></i>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start justify-content-between">
+                            <span>
+                                <i class="bi bi-pencil-fill me-3"></i>
+                                <span class="sidebar-text">Blog</span>
+                            </span>
+                            <i class="bi bi-plus-square"></i>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start justify-content-between">
+                            <span>
+                                <i class="bi bi-check-square-fill me-3"></i>
+                                <span class="align-self-baseline">Audits</span>
+                            </span>
+                            <i class="bi bi-plus-square"></i>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start justify-content-between">
+                            <span>
+                                <i class="bi bi-chat-fill me-3"></i>
+                                <span class="sidebar-text">Client Feedback</span>
+                            </span>
+                            <i class="bi bi-plus-square"></i>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 text-start justify-content-between">
+                            <span>
+                                <i class="bi bi-gear-fill me-3"></i>
+                                <span class="align-self-baseline">Settings</span>
+                            </span>
+                            <i class="bi bi-plus-square"></i>
+                        </button>
+                    </li>
+                </ul>
+            </nav>
+            <main class="col-md-7 ms-sm-auto col-lg-7 p-3 text-dark overflow-auto">
+                <div class="content-section" id="contacts-content">
+                    <h4 class="text">Contacts</h4>
+                </div>
+            </main>
+        </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
