--- a/index.html
+++ b/index.html
@@ -136,10 +136,50 @@
                     </li>
                 </ul>
             </nav>
-            <main class="col-md-7 ms-sm-auto col-lg-7 p-3 text-dark overflow-auto">
-                <div class="content-section" id="contacts-content">
-                    <h4 class="text">Contacts</h4>
-                </div>
+            <main class="col-md-7 col-lg-7 p-4 text-dark overflow-auto flex-grow-1">
+                <div class="content-section text-start" id="contacts-content">
+                    <div class="d-flex justify-content-between">
+                        <div class="d-flex">
+                            <h4 class="me-3 my-auto">Contacts</h4>
+                            <div class="my-auto">Total Count:</div>
+                            <div id="contact-count" class="my-auto px-2">0</div>
+                        </div>
+                        <div class="d-flex">
+                        </div>
+
+
+                    </div>
+                    <div class="d-flex justify-content-between my-2">
+                        <span>
+                            <label>
+                                <input type="text" class="form-control rounded-0" placeholder="Search"/>
+                            </label>
+                        </span>
+                        <div>
+                            <button class="btn btn-primary rounded-0">Filter</button>
+                            <button class="btn btn-primary rounded-0">Add Contact</button>
+                        </div>
+
+                    </div>
+
+                    <hr/>
+                    <div class="w-auto">
+                        <table class="w-100">
+                            <tr class="border-bottom">
+                                <th>Type</th>
+                                <th>Date</th>
+                                <th>Name</th>
+                                <th>Phone</th>
+                                <th>Status</th>
+                                <th>Activity</th>
+                            </tr>
+                            <tbody id="contacts-table">
+
+                            </tbody>
+                        </table>
+                    </div>
+
+
             </main>
         </div>
     </div>
