Fixed dashboard disappearing header when screen size changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body class="text-light">
-    <div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-lg d-flex sticky-top justify-content-between p-2" >
+    <div class="navbar-container container-fluid p-0 sticky-top">
+        <nav class="navbar navbar-expand-lg d-flex justify-content-between p-2" >
             <div class="">
                 <a class="navbar-brand col" href="#">
                     <img src="./assets/spectrum_logo.png" alt="spectruminc logo" height="20">
@@ -30,7 +30,7 @@
 
     <div id="main-container" class="container-fluid">
         <div class="row p-0">
-            <nav class="text-light p-0 sidebar overflow-auto pb-5 col-md-3 col-lg-3 col-xl-2">
+            <nav class="text-light p-0 sidebar pb-5 col-md-3 col-lg-3 col-xl-2">
                 <ul class="list-unstyled ps-0">
                     <li>
                         <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 justify-content-between text-start collapsed">
@@ -174,7 +174,7 @@
                                 <th>Phone</th>
                                 <th>Email</th>
                                 <th>Status</th>
-                                <th>Actions</th>
+                                <th class="text-end">Actions</th>
                             </tr>
                             <tbody id="contacts-table">
 
