--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="text-light">
     <div class="navbar-container container-fluid p-0 sticky-top">
         <nav class="navbar navbar-expand-lg d-flex justify-content-between p-2" >
-            <div class="">
+            <div>
                 <a class="navbar-brand col" href="#">
                     <img src="./assets/spectrum_logo.png" alt="spectruminc logo" height="20">
                 </a>
@@ -54,12 +54,12 @@
                     </li>
 
                     <li>
-                        <button class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 justify-content-between text-start" data-bs-toggle="collapse" data-bs-target="#contacts-collapse" aria-expanded="true">
+                        <button id="contact-manager-button" class="nav-button d-flex btn btn-toggle text-light w-100 rounded-0 justify-content-between text-start" data-bs-toggle="collapse" data-bs-target="#contacts-collapse" aria-expanded="true">
                             <span>
                                 <i class="bi bi-person-fill me-3"></i>
                                 <span class="align-self-baseline">Contact Manager</span>
                             </span>
-                            <i class="bi bi-dash-square"></i>
+                            <i id="contact-manager-collapse-icon" class="bi bi-dash-square"></i>
                         </button>
                         <div class="show px-4" id="contacts-collapse">
                             <ul class="btn-toggle-nav list-unstyled small">
@@ -204,9 +204,8 @@
         </div>
     </div>
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/listeners.js"></script>
 </body>
 </html>
