--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spectrum Inc. Manager</title>
+    <title>Contact Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="./css/index.css" rel="stylesheet">
@@ -153,8 +153,11 @@
                             <input type="text" class="form-control rounded-0" placeholder="Search" id="search-input">
                         </span>
                         <div>
-                            <button class="btn btn-secondary rounded-0">Filter</button>
-                            <button class="btn btn-secondary rounded-0">Add Contact</button>
+                            <button class="btn btn-secondary rounded-0"><i class="bi bi-funnel-fill"></i>
+                            </button>
+                            <button class="btn btn-secondary rounded-0">
+                                Add Contact
+                            </button>
                         </div>
 
                     </div>
@@ -173,7 +176,7 @@
                                 <th>Name</th>
                                 <th>Phone</th>
                                 <th>Email</th>
-                                <th>Status</th>
+                                <th>Source</th>
                                 <th class="text-end">Actions</th>
                             </tr>
                             <tbody id="contacts-table">
